--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -371,7 +371,7 @@ Interactive analysis methods reduce the challenges posed by the large volume, hi
 Tracking \& monitoring allows users to track important information in a highly integrated or information-hidden visual analytics system.
 LiveGantt~\cite{Jo2014} displays detailed information via mouse hover. Meyer et al.~\cite{Meyer2013} displayed the details of the stored procedure by brushing the target node.
 %探索和导航提供了用户改变可视化视图。PlanningVis利用选择列表的下拉和上滚选择目标数据集。
-Exploration and navigation provides users access to change visualization view. PlanningVis~\cite{sun2019planningvis} used drop-down and roll-up of list to select target dataset.
+Exploration \& navigation provides users access to change visualization view. PlanningVis~\cite{sun2019planningvis} used drop-down and roll-up of list to select target dataset.
 %DataShot从数据表中提取了大量有趣的数据，然后根据训练好的决策树将数据映射为可视化，并将其进行外部表达。
 DataShot~\cite{wang2019datashot} extracted a large amount of interesting data from the data table, then mapped the data to visualizations based on a trained decision trees and expressed them externally.
 %不同的交互式分析手段结合在可视化分析系统是常见的现象。
@@ -451,14 +451,28 @@ Dutta et al. \cite{dutta2016situ} developed the tech of visualization of GMM bas
 % 交互式分析方法使研究人员挖掘传感信号数据的隐藏模式和价值信息。
 Interactive analysis methods assist researchers in uncovering hidden patterns and worthwhile information in signal sensing data.
 %研究人员设计的原型系统提供了一套操作，帮助用户实现交互式数据探索。
-The prototype systems \cite{eirich2021irvine, narechania2020safetylens, suschnigg2020exploration, Zhou2018, zhao2019visual}designed by researchers provide a set of operations to assist users achieve interactive data exploration. 
+The prototype systems \cite{eirich2021irvine, narechania2020safetylens, suschnigg2020exploration, zhao2019visual, Zhou2018} designed by researchers provide a set of operations to assist users achieve interactive data exploration. 
 %跟踪和监控帮助用户进行流畅的数据探索。
 Tracking \& monitoring assist users in carrying out fluent data exploration.
 %zhao等人在许多视图和面板中提供交互。当用户在每个视图中移动或点击鼠标时，将显示详细信息。为进一步的观察和分析提供了多视图显示模式。
-Zhao et al. \cite{zhao2019visual} provided interaction in many views and panels. When users move or click the mouse in each view, detailed information will displayed. In addition, they provided a multiple-view display mode for further observation and analysis. 
+Zhao et al. \cite{zhao2019visual} and Zhou et al. \cite{Zhou2018} provided interaction in many views and panels. When users move or click the mouse in each view, detailed information will displayed. In addition, they provided a multiple-view display mode for further observation and analysis. 
+%探索&导航为用户提供按需细节和视图更新。
+Exploration \& navigation provide detail-on-demand and views update for users.
+%PAVED通过鼠标光标的变换提供了对电机参数子集性能约束和偏好的选择。
+PAVED \cite{cibulski2020paved} offered a selection on motor parameter subset performance constraints and preferences by a transformation of the mouse cursor.
+%知识外化和细化识别被经常用于异常发现和态势监测方面。
+Knowledge \& Externalization and Refinement \& Identification are commonly utilized in anomaly detection and situational monitoring.
+IRVINE \cite{eirich2021irvine} combines interactive clustering and data labeling techniques, allowing users to analyze clusters of engines with similar signatures. Analysing signatures from engines acoustic data to detect and understand previously unknown errors.
 
 %   应用领域
 \subsection{Application Areas}
+%信号传感数据来源众多，主要应用于设计开发、工业生产、分析反馈领域。
+Signal sensing data come from numerous sources and are mainly applied to \textit{Design \& Development}, \textit{Industrial Production}, and \textit{Analysis \& Feedback}.
+%这些工作应用光学，压力和温度传感器数据可视化制造材料和制造产品。其他工作致力于通过可视化技术分析多传感数据用于研究制造产品的耐久性，安全性，和异常状态。
+In Design \& Development, these work \cite{Huettenberger2015, Suzuki2020, Zappulla2019} use optical, pressure and temperature sensor data to visualize manufacturing materials and manufactured products. Other work are devoted to the analysis of multi-sensor data through visualization techniques for the study of durability \cite{zhao2019visual}, safety \cite{narechania2020safetylens}, and abnormal states \cite{eirich2021irvine} of manufactured products.
+In Industrial Production, several visual analytics systems are designed for industrial production situational monitoring \cite{Zhou2018}, production quality control \cite{Huettenberger2015} and manufacturing product inspection \cite{eirich2021irvine}.
+In Analysis \& Feedback, most of the research work has an analytical feedback component, e.g., the analysis of parameter sets for the improvement of electric motor by means of human-computer interaction and expert collaboration \cite{cibulski2020paved}.
+
 
 %   讨论
 \subsection{Discussion}
