--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -359,7 +359,7 @@ Chen et al.~\cite{chen2017sequence} used triangle glyphs to encode the number of
 	\vspace{-3em}
 	%图像和视频数据应用于缺陷检测的研究。
 	\caption{Models and algorithms applied to tabular text data.}
-	\label{fig:imageandvideo}
+	\label{fig:tabulartextdata2}
 	\vspace{-1.5em}
 \end{figure}
 
@@ -584,22 +584,25 @@ AR and VR devices have a more interactive nature than screens. Operators wear AR
 %同时，数据维度也逐渐从二维扩展到三维。相较于平面，立体能够传达更多的信息。比如材料的物理结构信息，设备在立体空间中的位置关系等。为此，我们希望体可视化技术可以更多地应用在制造业中。
 At the same time, the data dimension has been extended from 2D to 3D. Compared to two dimensions, three dimensions can convey more information. For example, the physical structure of the material and the position of the device in the 3D space. To this end, we hope that volume visualization technologies would be more widely used in manufacturing.
 
-%  多数据类型合作
-\section{Multi-Type Data Collaboration}
-%在本节，我们将针对制造业流程中的多数据类型合作的应用进行讨论。
-In this section, we will discuss the researches for the collaboration of multiple data types in manufacturing processes.
-%   可视化技术
-\subsection{Visualization Techniques}
-%
+%  多种多媒体数据合作
+\section{Multiple Multimedia Data Collaboration}
+%在本节，我们将针对制造业流程中的多种多媒体数据合作的应用进行讨论。
+In this section, we will discuss multiple multimedia data collaborations in manufacturing processes.
+%总所周知，产品设计的数据一般是图象视频数据，而用户意见反馈的数据为表格文本数据，这两种多媒体数据类型是不同的。产品设计需要用户的意见反馈作为依据进行迭代更新。我们将此称为多种多媒体数据合作。
+As we all know, product design data is generally image and video data, while user feedback data is tabular text data, these two types of multimedia data are different. Product design requires user feedback as the basis for iterative updates, and we refer to similar cases as multiple multimedia data collaboration.
+%随着数字孪生概念的提出与实践，促进了多种多媒体数据的合作。
+With the introduction and practice of the \textit{Digital Twin} (DT) concept, the collaboration of multiple multimedia data is promoted.
+%可视化与可视分析作为一种工具，可以帮助研究人员减少数据来源多和数据类型不一致带来的分析负担。
+Visualization and visual analytics as a tool can help researchers reduce the analytical burden associated with multiple data sources and inconsistent data types.
+%同时在分析时增加交互功能，可以帮助研究人员更好的发觉数据之间的联系，从而做出更好的决策。
+Moreover, adding some interactive functions can help researchers discover connections between data to make better decisions.
+%我们选取几个常见的多媒体数据合作案例讲解可视化与可视分析在其中的作用。
+We choose several multimedia data collaboration cases to explain the role of visualization and visual analytics.
 
-%   交互分析手段
-\subsection{Interactive Analysis Methods}
+%数字孪生
+\subsection{Digital Twin}
+%数字孪生是指通过集成物理反馈数据，并辅以人工智能、机器学习和软件分析，在信息化平台内建立一个数字化模拟。
 
-%   应用领域
-\subsection{Application Areas}
-
-%   讨论
-\subsection{Discussion}
 
 % 总结和机会
 \section{Conclusion And Opportunities}
