--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -189,7 +189,7 @@ The above high-quality research works not only provide an adequate theoretical f
 %在本节我们将详细描述论文的分类法和收集的方法论。   
 In this section we describe in detail the taxonomy of papers and the methodology of their collection.  
  
-\begin{figure}[t]
+\begin{figure}[pos=t]
 	\centering
 	\vspace{.5em}
 	\includegraphics[width=0.48\textwidth]{Images/table.pdf}
@@ -443,7 +443,7 @@ Suzuki et al. \cite{Suzuki2020} chose volume visualization to display a load pat
 %Matthew等人介绍了一种处理来自温度传感器的高密度数据的方法，并使用三维可视化来显示连续钢坯铸造过程中模具区域的热流体流场。
 Matthew et al. \cite{Zappulla2019} introduced a methodology for the processing of high-density data from temperature sensors and used 3D visualization of thermal fluid flow fields in mold region during continuous steel-slab casting.
 %Huettenberger使用光学测量产生的数据，将汽车部件上的系统误差区域可视化，以实现自动检测。
-Huettenberger et al. \cite{Huettenberger2015} used the data produced by optical measurements to visualize the areas of systematic errors on auto parts in order to achieve automatic detection.
+Huettenberger et al. \cite{Huettenberger2015} used the data produced by optical measurements to visualize the areas of systematic errors on auto parts in order to achieve automatic detection.
 %Dutta等人开发了基于GMM数据的可视化技术，使用表面渲染和不确定的等值线来检测跨音速喷气发动机失速的早期迹象。
 Dutta et al. \cite{dutta2016situ} developed the tech of visualization of GMM based data using surface renderings and uncertain isocontours to detect the early signs of transonic jet engine stall.
 %   交互分析手段
