--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -315,7 +315,7 @@ Semi-structured data is data between structured and unstructured, which do not c
 %制造业中的表格文本数据具有体量大、维度高、关系复杂的特点。可视化和可视分析的介入可以方便研究人员对表格文本数据进行更详细的分析。
 Tabular text data in the manufacturing industry is large-scale, high-dimensional, and complex relational. The intervention of visualization and visual analysis can facilitate researchers to analyze the tabular text data with more details.
 
-\begin{figure*}[pos=t]
+\begin{figure*}
 	\centering
 	\includegraphics[width=\textwidth]{Images/tabular text data.pdf}
 	\vspace{-4em}
@@ -464,14 +464,26 @@ PAVED \cite{cibulski2020paved} offered a selection on motor parameter subset per
 Knowledge \& Externalization and Refinement \& Identification are commonly utilized in anomaly detection and situational monitoring.
 IRVINE \cite{eirich2021irvine} combines interactive clustering and data labeling techniques, allowing users to analyze clusters of engines with similar signatures. Analysing signatures from engines acoustic data to detect and understand previously unknown errors.
 
+\begin{figure*}
+	\centering
+	\includegraphics[width=\textwidth]{Images/signal data.pdf}
+	\vspace{-1em}
+	%表格文本数据对时间性的可视化。
+	\caption{Visualization and anlysis for signal sensing data. (1) Visualization and summary of an incident report. (2) Visual analytics system for event sequence data exploration. (3) Display a timeline of Scandinavian pop music with TimeLineCurator. (4) Interface of PlanningVis which supports interactive exploration, comparison and optimization of production plans (5) Visual Analytics for Decomposing Temporal Event Series of Production Lines.}
+	\label{fig:signaldata}
+	\vspace{-1.5em}
+\end{figure*}
+
 %   应用领域
 \subsection{Application Areas}
 %信号传感数据来源众多，主要应用于设计开发、工业生产、分析反馈领域。
 Signal sensing data come from numerous sources and are mainly applied to \textit{Design \& Development}, \textit{Industrial Production}, and \textit{Analysis \& Feedback}.
 %这些工作应用光学，压力和温度传感器数据可视化制造材料和制造产品。其他工作致力于通过可视化技术分析多传感数据用于研究制造产品的耐久性，安全性，和异常状态。
 In Design \& Development, these work \cite{Huettenberger2015, Suzuki2020, Zappulla2019} use optical, pressure and temperature sensor data to visualize manufacturing materials and manufactured products. Other work are devoted to the analysis of multi-sensor data through visualization techniques for the study of durability \cite{zhao2019visual}, safety \cite{narechania2020safetylens}, and abnormal states \cite{eirich2021irvine} of manufactured products.
+% 在工业生产中，一些可视分析系统被设计用于工业生产态势监测，生产质量控制，生产产品检验。
 In Industrial Production, several visual analytics systems are designed for industrial production situational monitoring \cite{Zhou2018}, production quality control \cite{Huettenberger2015} and manufacturing product inspection \cite{eirich2021irvine}.
-In Analysis \& Feedback, most of the research work has an analytical feedback component, e.g., the analysis of parameter sets for the improvement of electric motor by means of human-computer interaction and expert collaboration \cite{cibulski2020paved}.
+%大多数研究工作都有分析反馈环节，比如：通过人机交互和专家合作方式分析参数集合用于改进电动机。
+In Analysis \& Feedback, most of the research work has an analytical feedback component, e.g., the analysis of parameter sets for the improvement of electric motor design by means of human-computer interaction and expert collaboration \cite{cibulski2020paved}.
 
 
 %   讨论
@@ -551,7 +563,7 @@ Refinement \& identification facilitate analysts to label data based on known id
 %用户标记高质量和低质量的结果，对搜索结果进行优化。
 Analysts label high and low quality results and optimize the search results in Paramorama prototype~\cite{Pretorius2011} .  
 
-\begin{figure*}[pos=t]
+\begin{figure*}
 	\centering
 	\includegraphics[width=\textwidth]{Images/imageandvideo2.pdf}
 	\vspace{-5.5em}
