--- a/chinavis2022_survey/multimedia.tex
+++ b/chinavis2022_survey/multimedia.tex
@@ -627,8 +627,39 @@ trajectory data, warehouse data, and store data. Visualization and visual analyt
 
 % 总结和机会
 \section{Conclusion And Opportunities}
-In the context of Industry 4.0, the demand for analyzing manufacturing data has increased significantly. Visualization and visual analytics as an effective tool can help researchers extract useful and valuable information from the complex and high-volume manufacturing data. In this paper, we investigate and discuss works related to the visualization and visual analysis of multimedia data in manufacturing. We propose a novel taxonomy that classifies multimedia
-data into tabular text data, sensing signal data, and image and video data, according to their types. Then we introduce different multimedia data in terms of visualization techniques, interactive analysis methods, and application areas. As shown in Figure~\ref{fig:table}, we encode the taxonomic bases with different colors.
+%在工业4.0的背景下，对分析制造业数据的需求大大增加。可视化和可视化分析作为一种有效的工具，可以帮助研究人员从复杂和高容量的制造数据中提取有用和有价值的信息。
+In the context of Industry 4.0, the demand for analyzing manufacturing data has increased significantly. Visualization and visual analytics as an effective tool can help researchers extract useful and valuable information from the complex and high-volume manufacturing data. 
+%在本文中，我们回顾了与制造业中多媒体数据的可视化和视觉分析有关的工作。
+In this paper, we review research related to the visualization and visual analysis of multimedia data in manufacturing.
+%我们提出了一个新的分类法，将多媒体数据分为表格文本数据、传感信号数据、以及图像和视频数据，根据它们的类型。然后，我们从可视化技术、交互式分析方法和应用领域等方面介绍了不同的多媒体数据。如图1所示，我们用不同的颜色对分类学基础进行编码。
+We propose a novel taxonomy that classifies multimedia data into tabular text data, sensing signal data, and image \& video data by data type, and then discusses them separately in terms of visualization techniques, interactive analysis methods, and application areas. As shown in Figure~\ref{fig:table}, we encode the classification basis with different colors.
+%此外，通过对相关工作的分析和比较，我们确定了制造业多媒体数据可视化与可视分析的趋势和最近的发展。
+Moreover, through analysis and comparison of related work, we identify trends and recent developments in multimedia data visualization and visual analytics in manufacturing.
+%接下来，我们将从“先进技术的引入”，“通用可视分析方案和流程”、“多种多媒体数据融合可视分析”对关键挑战和未来研究进行讨论和总结。
+Next, we will discuss and summarize the key challenges and future research in the areas of ``Advanced Technology Usage", ``Common Visual Analytics Solutions and Processes", and ``Multi-Source and Multi-Type Data Fusion Visual Analytics".
+
+%先进技术的使用
+\textbf{Advanced Technology Usage.}
+%作为先进技术的代表，在软件方面的机器学习和人工智能得到了飞速发展，在硬件方面的AR和VR同样大放异彩。
+As representatives of advanced technologies, machine learning and artificial intelligence on the software side and AR and VR on the hardware side have been developed in leaps and bounds.
+%机器学习和人工智能为高效处理制造业多媒体数据提供了支持。同时，有大量工作对数据的自动理解和自动信息图生成做了研究。
+Machine learning and artificial intelligence provide support for efficient processing of multimedia data in manufacturing. Also, a significant amount of research has been done on automatic data understanding and automatic infographic generation.
+%可穿戴的AR和VR设备能够模拟和利用实际生产环境，增加了可视交互的途径。
+Wearable AR and VR devices are capable of simulating and utilizing actual production environments, increasing the avenues for visual interaction.
+%然而目前对先进技术的使用有以下几个挑战。现有的机器学习算法的准确率不够，基于人工智能的自动信息图生成也常需要人工介入。在AR和VR中如何准确建模和设计合理的交互仍存在问题。
+However there are several challenges about current usage of advanced technologies as follows. Existing machine learning algorithms are not sufficiently accurate, and AI-based automatic infographic generation often requires human intervention. It remains problematic to accurately model and design reasonable interactions in AR and VR. 
+
+%通用可视分析方案和流程
+\textbf{Common Visual Analytics Solutions and Processes.}
+%现在中国国民经济行业分类中，制造业有31个大类，179个中类，609个小类。尽管细分门类众多，但制造业数据类型大致是相同的。
+Nowadays, there are 31 major categories, 179 medium categories and 609 small categories in China's national economic industry classification. Although there are many subdivision categories, the data types are roughly the same.
+%因此设计通用的可视分析方案和流程是必须的。
+Therefore, it is essential to design common visual analysis solutions and processes.
+%同时可视化与可视分析也可以用于设计系统架构，以减少制造过程中的低效。
+Visualization and visual analytics can also be used to design system architectures to reduce inefficiencies in the manufacturing process~\cite{Marconi2021,Yao2019}.
+
+\textbf{Multi-Source and Multi-Type Data Fusion Visual Analytics.}
+
 
 \bibliographystyle{cas-model2-names}
 \bibliography{multimedia}
